--- a/wiki/UserStory.wiki
+++ b/wiki/UserStory.wiki
@@ -119,10 +119,10 @@
 
 ||<b>US</b>||<b>Tarefa</b>||<b>Descrição</b>||<b>Iteração</b>||<b>Prioridade</b> || <b>Estimado</b>|| <b>Real</b>||
 ||US04||TA||Implementar tela inicial do sistema com informações de:<br>-Criar memorandos, Ofícios;<br>-Localizar Memorandos (enviados, sua rota percorrida e despachos adicionados);  || ||Essencial ||2h || ||
-||US04||TA||Implementar controle para Criar memorandos|| ||Essencial ||4h || ||
-||US04||TA||Implementar modelo para Criar memorandos|| ||Essencial ||4h || ||
-||US04||TA||Implementar controle para Localizar Memorandos|| ||Essencial ||4h || ||
-||US04||TA||Implementar modelo para Localizar Memorandos|| ||Essencial ||4h || ||
+||US04||TA24||Implementar controle para Criar memorandos|| ||Essencial ||4h || ||
+||US04||TA25||Implementar modelo para Criar memorandos|| ||Essencial ||4h || ||
+||US04||TA26||Implementar controle para Localizar Memorandos|| ||Essencial ||4h || ||
+||US04||TA27||Implementar modelo para Localizar Memorandos|| ||Essencial ||4h || ||
 
 <br>
 
@@ -133,11 +133,11 @@
 <h2>Tramitação do processo</h2>
 
 ||<b>US</b>||<b>Tarefa</b>||<b>Descrição</b>||<b>Iteração</b>||<b>Prioridade</b> || <b>Estimado</b>|| <b>Real</b>||
-||US05||TA||Implementar memorandos: individual ou circular; || ||Essencial ||4h || ||
-||US05||TA||Implementar criação de memorando: destinatário, assunto e descrição,<br> arquivos anexos, conferência, número protocolo automático|| ||Essencial ||4h || ||
-||US05||TA||Implementar Moderação: Alerta de Memorandos Pendentes, Aprovação,<br> Devolução  || ||Essencial ||8h || ||
-||US05||TA||Implementar Trâmite Interno: Caixa Postal com sistema de busca, <br>despachos, mensagens de alerta, notificações por e-mail  || ||Essencial ||8h || ||
-||US05||TA||Implementar Arquivamento: automático para memorandos circulares; <br>manual para memorandos individuais|| ||Essencial ||8h || ||
+||US05||TA28||Implementar memorandos: individual ou circular; || ||Essencial ||4h || ||
+||US05||TA29||Implementar criação de memorando: destinatário, assunto e descrição,<br> arquivos anexos, conferência, número protocolo automático|| ||Essencial ||4h || ||
+||US05||TA30||Implementar Moderação: Alerta de Memorandos Pendentes, Aprovação,<br> Devolução  || ||Essencial ||8h || ||
+||US05||TA31||Implementar Trâmite Interno: Caixa Postal com sistema de busca, <br>despachos, mensagens de alerta, notificações por e-mail  || ||Essencial ||8h || ||
+||US05||TA32||Implementar Arquivamento: automático para memorandos circulares; <br>manual para memorandos individuais|| ||Essencial ||8h || ||
 
 <br>
 
@@ -148,8 +148,6 @@
 <h2>Recursos adicionais</h2>
 
 ||<b>US</b>||<b>Tarefa</b>||<b>Descrição</b>||<b>Iteração</b>||<b>Prioridade</b> || <b>Estimado</b>|| <b>Real</b>||
-||US06||TA||Implementar Avisos que serão enviados automaticamente por e-mail|| ||Essencial ||8h || ||
-||US06||TA||Implementar Mensagem de Cobrança (visa cobrar o que já foi pedido<br> anteriormente)|| ||Essencial ||8h || ||
-||US06||TA||Implementar Transferência de Arquivos Anexados|| ||Essencial ||12h || ||
-
-Transferência de Arquivos Anexados
+||US06||TA33||Implementar Avisos que serão enviados automaticamente por e-mail|| ||Essencial ||8h || ||
+||US06||TA34||Implementar Mensagem de Cobrança (visa cobrar o que já foi pedido<br> anteriormente)|| ||Essencial ||8h || ||
+||US06||TA35||Implementar Transferência de Arquivos Anexados|| ||Essencial ||12h || ||
