--- a/wiki/Iteration.wiki
+++ b/wiki/Iteration.wiki
@@ -1,13 +1,20 @@
-#summary One-sentence summary of this page.
+#Pçanejamento de iterações.
 
 = Introduction =
 
-Add your content here.
+Mostra as iterações do projeto.
+
 
 
 = Details =
 
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+Aqui mostramos quem faz o quê de cada tarefa exposta pelo US (User Stories).
+
+
+== I00 ==
+
+||Iteração ||US ||TA ||Responsável||Dt início||DT limite||Status||
+||Iteração ||US ||TA ||Responsável||Dt início||DT limite||Status||
+||Iteração ||US ||TA ||Responsável||Dt início||DT limite||Status||
+||Iteração ||US ||TA ||Responsável||Dt início||DT limite||Status||
+||Iteração ||US ||TA ||Responsável||Dt início||DT limite||Status||
