--- a/wiki/Iteration.wiki
+++ b/wiki/Iteration.wiki
@@ -13,7 +13,7 @@ Mostra as iterações do projeto.
 
 == I00 ==
 
-||Iteração ||US ||Tarefas ||Dt início||DT limite||Status||
+||Iteração ||User Stories ||Tarefas ||Dt início||Dt limite||Status||
 ||I01 ||us ||ta ||20/09/2010||04/10/2010||Esperando||
 ||I02 ||us ||ta ||04/10/2010||18/10/2010||Esperando||
 ||I03 ||us ||ta ||18/10/2010||03/11/2010||Esperando||
