Edited wiki page Release through web user interface.

--- a/wiki/Release.wiki
+++ b/wiki/Release.wiki
@@ -15,5 +15,5 @@ Serão duas _Releases_ sendo a primeira ao final da terceira Iteração e a segu
 
 
 ||Release ||Gerente || Iteração ||Periodo ||
-||R01 ||Arnaldo Sena || || 20/09/2010 a 03/11/2010||
-||R02 ||Cláudia Stevam|| ||03/11/2010 a  29/11/2010||
+||Re01 ||Arnaldo Sena || || 20/09/2010 a 03/11/2010||
+||Re02 ||Cláudia Stevam|| ||03/11/2010 a  29/11/2010||
