--- a/wiki/Release.wiki
+++ b/wiki/Release.wiki
@@ -1,4 +1,4 @@
-#Plano de Release.
+# Plano de Release.
 
 = Introduction =
 
@@ -15,5 +15,5 @@ Serão duas _Releases_ sendo a primeira ao final da terceira Iteração e a segu
 
 
 ||Release ||Gerente || Iteração ||Periodo ||
-||Re01 ||Arnaldo Sena ||[Iteration] Iteração || 20/09/2010 a 03/11/2010||
+||Re01 ||Arnaldo Sena ||[Iteration Iteration] || 20/09/2010 a 03/11/2010||
 ||Re02 ||Cláudia Stevam|| ||03/11/2010 a  29/11/2010||
