--- a/wiki/Iteration.wiki
+++ b/wiki/Iteration.wiki
@@ -13,7 +13,7 @@ Mostra as iterações do projeto.
 
 ==Iteração==
 
-||<b>Iteração</b>||<b>User Stories</b>||<b>Tarefas</b>||<b>Dt início</b>||<b>Dt limite</b>||<b>Status</b>||
+||<b>Iteração</b>||<b>[UserStory User Stories]</b>||<b>Tarefas</b>||[Release Release] ||<b>Dt início</b>||<b>Dt limite</b>||<b>Status</b>||
 ||I01 ||us ||ta ||20/09/2010||04/10/2010||Esperando||
 ||I02 ||us ||ta ||04/10/2010||18/10/2010||Esperando||
 ||I03 ||us ||ta ||18/10/2010||03/11/2010||Esperando||
