--- a/wiki/Iteration.wiki
+++ b/wiki/Iteration.wiki
@@ -1,4 +1,4 @@
-#Pçanejamento de iterações.
+Planejamento de iterações.
 
 = Introduction =
 
@@ -14,8 +14,10 @@ Mostra as iterações do projeto.
 ==Iteração==
 
 ||<b>Iteração</b>||<b>[UserStory User Stories]</b>||<b>Tarefas</b>||[Release Release] ||<b>Dt início</b>||<b>Dt limite</b>||<b>Status</b>||
-||I01 ||us ||ta ||R01 ||20/09/2010||04/10/2010||Esperando||
-||I02 ||us ||ta ||R01 ||04/10/2010||18/10/2010||Esperando||
-||I03 ||us ||ta ||R01 ||18/10/2010||03/11/2010||Esperando||
-||I04 ||us ||ta ||R02 ||03/11/2010||17/11/2010||Esperando||
-||I05 ||us ||ta ||R02 ||17/11/2010||29/11/2010||Esperando||
+||I01 ||us ||ta01 a ta16 ||R01 ||20/09/2010||04/10/2010||Esperando||
+||I02 ||us ||ta17 a ta24 ||R01 ||04/10/2010||18/10/2010||Esperando||
+||I03 ||us ||ta25 a ta30 ||R01 ||18/10/2010||03/11/2010||Esperando||
+||I04 ||us ||ta31 a ct10 ||R02 ||03/11/2010||17/11/2010||Esperando||
+||I05 ||us ||ta33 a ct12 ||R02 ||17/11/2010||29/11/2010||Esperando||
+
+ct - Caso de Teste
