--- a/wiki/Iteration.wiki
+++ b/wiki/Iteration.wiki
@@ -14,10 +14,10 @@ Mostra as iterações do projeto.
 ==Iteração==
 
 ||<b>Iteração</b>||<b>[UserStory User Stories]</b>||<b>Tarefas</b>||[Release Release] ||<b>Dt início</b>||<b>Dt limite</b>||<b>Status</b>||
-||I01 ||us ||ta01 a ta16 ||R01 ||20/09/2010||04/10/2010||Esperando||
-||I02 ||us ||ta17 a ta24 ||R01 ||04/10/2010||18/10/2010||Esperando||
-||I03 ||us ||ta25 a ta30 ||R01 ||18/10/2010||03/11/2010||Esperando||
-||I04 ||us ||ta31 a ct10 ||R02 ||03/11/2010||17/11/2010||Esperando||
-||I05 ||us ||ta33 a ct12 ||R02 ||17/11/2010||29/11/2010||Esperando||
+||I01 ||us ||ta01 a ta16 ||r01 ||20/09/2010||04/10/2010||Esperando||
+||I02 ||us ||ta17 a ta24 ||r01 ||04/10/2010||18/10/2010||Esperando||
+||I03 ||us ||ta25 a ta30 ||r01 ||18/10/2010||03/11/2010||Esperando||
+||I04 ||us ||ta31 a ct10 ||r02 ||03/11/2010||17/11/2010||Esperando||
+||I05 ||us ||ta33 a ct12 ||r02 ||17/11/2010||29/11/2010||Esperando||
 
 ct - Caso de Teste
