--- a/wiki/Iteration.wiki
+++ b/wiki/Iteration.wiki
@@ -14,7 +14,7 @@ Mostra as iterações do projeto.
 ==Iteração==
 
 ||<b>Iteração</b>||<b>[UserStory User Stories]</b>||<b>Tarefas</b>||[Release Release] ||<b>Dt início</b>||<b>Dt limite</b>||<b>Status</b>||
-||I01 ||us1 us1, us2 ||ta01 a ta16 ||!r01 ||20/09/2010||04/10/2010||Esperando||
+||I01 ||us1 us1, us2 ||ta01 a ta16 ||![r01] ||20/09/2010||04/10/2010||Esperando||
 ||I02 ||us2, us3, us4 ||ta17 a ta24 ||!r01 ||04/10/2010||18/10/2010||Esperando||
 ||I03 ||us4, us5 ||ta25 a ta30 ||!r01 ||18/10/2010||03/11/2010||Esperando||
 ||I04 ||[us05 us05] ||ta31 a ct10 ||!r02 ||03/11/2010||17/11/2010||Esperando||
