Edited wiki page Iteration through web user interface.

--- a/wiki/Iteration.wiki
+++ b/wiki/Iteration.wiki
@@ -17,7 +17,7 @@ Mostra as iterações do projeto.
 ||I01 ||us1 us1, us2 ||ta01 a ta16 ||re01 ||20/09/2010||04/10/2010||Esperando||
 ||I02 ||us2, us3, us4 ||ta17 a ta24 ||re01 ||04/10/2010||18/10/2010||Esperando||
 ||I03 ||us4, us5 ||ta25 a ta30 ||re01 ||18/10/2010||03/11/2010||Esperando||
-||I04 ||[UserStory us05] ||ta31 a ct10 ||re02 ||03/11/2010||17/11/2010||Esperando||
+||I04 ||[UserStory#US05 US05] ||ta31 a ct10 ||re02 ||03/11/2010||17/11/2010||Esperando||
 ||I05 ||us6 ||ta33 a ct12 ||re02 ||17/11/2010||29/11/2010||Esperando||
 
 <b>ct</b> - Caso de Teste
