--- a/wiki/Release.wiki
+++ b/wiki/Release.wiki
@@ -15,5 +15,5 @@ Serão duas _Releases_ sendo a primeira ao final da terceira Iteração e a segu
 
 
 ||Release ||Gerente || [Iteration Iteração] ||Periodo ||
-||Re01 ||Arnaldo Sena ||[Iteration Iteração] I01, I02 e I03 || 20/09/2010 a 03/11/2010||
-||Re02 ||Cláudia Stevam||[Iteration Iteração] I04, I05 ||03/11/2010 a  29/11/2010||
+||Re01 ||Arnaldo Sena ||I01, I02 e I03 || 20/09/2010 a 03/11/2010||
+||Re02 ||Cláudia Stevam||I04, I05 ||03/11/2010 a  29/11/2010||
