Edited wiki page Success through web user interface.

--- a/wiki/Success.wiki
+++ b/wiki/Success.wiki
@@ -3,7 +3,7 @@
 
 = Introduction =
 
-Add your content here.
+<b>Implantar um sistema de informação que permita a comunicação entre funcionários da instituição, através de memorandos, permitindo que estes possam enviar pareceres, comunicados, informativos e solicitações sem a necessidade do uso de papel.</b>
 
 
 = Details =
