Edited wiki page Success through web user interface.

--- a/wiki/Success.wiki
+++ b/wiki/Success.wiki
@@ -1,14 +1,7 @@
-#summary One-sentence summary of this page.
+#summary Descrição do sucesso do projeto.
 #labels Featured
 
 = Introduction =
 
-<b>Implantar um sistema de informação que permita a comunicação entre funcionários da instituição, através de memorandos, permitindo que estes possam enviar pareceres, comunicados, informativos e solicitações sem a necessidade do uso de papel.</b>
+<p><b>Implantar um sistema de informação que permita a comunicação entre funcionários da instituição, através de memorandos, permitindo que estes possam enviar pareceres, comunicados, informativos e solicitações sem a necessidade do uso de papel.</b></p>
 
-
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
