Edited wiki page Staff through web user interface.

--- a/wiki/Staff.wiki
+++ b/wiki/Staff.wiki
@@ -9,7 +9,7 @@ Professor Avaliador:
 
 
 Orientador:
-Leonardo Mendes            leonardo.cid@gmail.com
+Leonardo Mendes            [leonardo.cid@gmail.com]
 
 
 Desenvolvedores:
