--- a/wiki/Riscos.wiki
+++ b/wiki/Riscos.wiki
@@ -1,11 +1,13 @@
-#summary Riscos apontados pela equipe..
+#summary Riscos apontados pela equipe.
 
 = Introduction =
 
-Add your content here.
+Aqui a equipe aponta os riscos antes e durante o desenvovimento do produto.
 
 
 = Details =
+
+||Riscos||Prioridade||Responsável||Status||Solução||
 
 Add your content here.  Format your content with:
   * Text in *bold* or _italic_
